--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,6 +2,7 @@
     <head>
         <title>test</title>
         <script src="https://kit.fontawesome.com/cb1e47f6f5.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="abc.css">
     </head>
     <style>
@@ -35,7 +36,7 @@
         <div id="banner">
             <!--<img src="img.jpg" alt="">-->
             <div class="text1">
-            <div>
+            <div class="banner-top">
             <span id=pasco>PASCO</span>
             <span class="menu-right">
                 <span id="middle">
@@ -57,16 +58,31 @@
                 </span>
                 <i class="fa fa-search" style="color: white; font-size: 17px; margin: 2px 8px 0px 2px;" ></i>
                 <span class="verticle2"></span>
-                <i class="far fa-heart" style="color: white; font-size: 17px; margin: 2px 8px 0px 8px;" ></i>
+                <i class="material-icons" style="color: white; font-size: 20px; margin: 2px 8px -2px 8px;" >favorite_border</i>
                 <span class="verticle2"></span>
                 <i class="fas fa-shopping-cart" style="color: white; font-size: 17px; margin: 2px 18px 0px 8px;"></i>
+                <div class="horizontal-line"></div>
             </span>
             </div>
-            <div class="center">
+            <div class="banner-center">
                 <div style="color: rgb(182, 182, 182); font-size:20px; margin-bottom: 8px; letter-spacing: 1px;">INSPIRATION</div>
                 <div class="big" style="margin-bottom: -10px;">5 WAYS MILLLENNIALS CAN START</div>
-                <div class="big">BUILDING THEIR FUTURE TODAY</div>
+                <div class="big" style="margin-top: -4px;">BUILDING THEIR FUTURE TODAY</div>
                 <button>READ MORE</button>
+            </div>
+            <div class="banner-bottom">
+                <img src="henry.png" style="margin-top:-16px;">
+                <div style="margin-top: 18px; font-size: 14px; font-family:'Montserrat', sans-serif;color: white;font-weight: bold; letter-spacing:1px;">Henry Little</div>
+                <div style="margin-top: 9px; font-size: 12px; font-family:'Montserrat', sans-serif; color: rgb(190,190,190); letter-spacing:1px; font-weight:550;">
+                    <span style="margin-right: 7px; margin-left:7px;">Apri 28, 2016</span>
+                    <span>10:15</span>
+                </div>
+                <div style="margin-top: 30px; font-size: 12px; font-size: 12px; font-family:'Montserrat', sans-serif; color: rgb(190,190,190);">
+                    <i class="material-icons" style="font-size: 16px; margin-right: 3px; color: rgb(190,190,190);">forum</i>
+                    <span style="margin-right: 30px;  font-family:'Montserrat', sans-serif; letter-spacing:1px; font-weight:550;">Comments (28)</span>
+                    <i class="material-icons" style="font-size: 16px; margin-right: 2px; color: rgb(190,190,190);">favorite_border</i>
+                    <span style="letter-spacing:1px; font-weight:550;">Likes (07)</span>
+                </div>
             </div>
             </div>
             
