--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -34,7 +34,8 @@
             </div>
         </div>
         <div id="banner">
-            <!--<img src="img.jpg" alt="">-->
+            <i class="fas fa-angle-left left-arrow"></i>
+            <i class="fas fa-angle-right right-arrow"></i>
             <div class="text1">
             <div class="banner-top">
             <span id=pasco>PASCO</span>
@@ -72,16 +73,16 @@
             </div>
             <div class="banner-bottom">
                 <img src="henry.png" style="margin-top:-16px;">
-                <div style="margin-top: 18px; font-size: 14px; font-family:'Montserrat', sans-serif;color: white;font-weight: bold; letter-spacing:1px;">Henry Little</div>
-                <div style="margin-top: 9px; font-size: 12px; font-family:'Montserrat', sans-serif; color: rgb(190,190,190); letter-spacing:1px; font-weight:550;">
+                <div id="henry">Henry Little</div>
+                <div class="date-comment" style="margin-top: 9px;">
                     <span style="margin-right: 7px; margin-left:7px;">Apri 28, 2016</span>
                     <span>10:15</span>
                 </div>
-                <div style="margin-top: 30px; font-size: 12px; font-size: 12px; font-family:'Montserrat', sans-serif; color: rgb(190,190,190);">
+                <div class="date-comment" style="margin-top: 30px;">
                     <i class="material-icons" style="font-size: 16px; margin-right: 3px; color: rgb(190,190,190);">forum</i>
-                    <span style="margin-right: 30px;  font-family:'Montserrat', sans-serif; letter-spacing:1px; font-weight:550;">Comments (28)</span>
+                    <span style="margin-right: 30px;">Comments (28)</span>
                     <i class="material-icons" style="font-size: 16px; margin-right: 2px; color: rgb(190,190,190);">favorite_border</i>
-                    <span style="letter-spacing:1px; font-weight:550;">Likes (07)</span>
+                    <span>Likes (07)</span>
                 </div>
             </div>
             </div>
