--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -64,21 +64,21 @@
             </div>
             <div class="banner-center">
                 <div style="color: rgb(182, 182, 182); font-size:20px; margin-bottom: 8px; letter-spacing: 1px;">INSPIRATION</div>
-                <div class="big" style="margin-bottom: -10px;">5 WAYS MILLLENNIALS CAN START</div>
-                <div class="big" style="margin-top: -4px;">BUILDING THEIR FUTURE TODAY</div>
+                <div class="big" style="margin-left:11px; margin-bottom: -10px;">5 WAYS MILLLENNIALS CAN START</div>
+                <div class="big" style="margin-left: 4px; margin-top: 2px; word-spacing: -5px;">BUILDING THEIR FUTURE TODAY</div>
                 <button>READ MORE</button>
             </div>
             <div class="banner-bottom">
                 <img src="henry.png" style="margin-top:-16px;">
                 <div id="henry">Henry Little</div>
                 <div class="date-comment" style="margin-top: 9px;">
-                    <span style="margin-right: 7px; margin-left:7px;">Apri 28, 2016</span>
-                    <span>10:15</span>
+                    <span style="margin-right: 2px; margin-left:10px;">Apri 28, 2016</span>
+                    <span style="margin-right: 3px;">10:15</span>
                 </div>
                 <div class="date-comment" style="margin-top: 30px;">
-                    <i class="material-icons" style="font-size: 16px; margin-right: 3px; color: rgb(190,190,190);">forum</i>
-                    <span style="margin-right: 30px;">Comments (28)</span>
-                    <i class="material-icons" style="font-size: 16px; margin-right: 2px; color: rgb(190,190,190);">favorite_border</i>
+                    <i class="material-icons" style="font-size: 16px;margin-right: 3px; color: rgb(190,190,190);">forum</i>
+                    <span style="margin-right: 26px;">Comments (28)</span>
+                    <i  class="far fa-heart" style="font-size: 14px; color: rgb(190,190,190);"></i>
                     <span>Likes (07)</span>
                 </div>
             </div>
