--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,6 +4,7 @@
         <script src="https://kit.fontawesome.com/cb1e47f6f5.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="abc.css">
+        
     </head>
     <body>
         <div class="container">
@@ -12,7 +13,7 @@
                 <i class="fab fa-facebook-f" ></i>
                 <i class="fab fa-twitter" ></i>
                 <i class="fab fa-pinterest-p" ></i>
-                <i class="fab fa-vk" ></i>
+                <i class="fa fa-vk" ></i>
                 <i class="fab fa-google-plus-g" ></i>
                 <i class="fab fa-behance" ></i>
                 <i class="fab fa-dribbble" ></i>
