--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,23 +10,23 @@
         <div class="container">
             <div class="text">
                 <span class="nav-left">
-                <i class="fab fa-facebook-f" ></i>
-                <i class="fab fa-twitter" ></i>
-                <i class="fab fa-pinterest-p" ></i>
-                <i class="fa fa-vk" ></i>
-                <i class="fab fa-google-plus-g" ></i>
-                <i class="fab fa-behance" ></i>
-                <i class="fab fa-dribbble" ></i>
-                <i class="fab fa-instagram" ></i>
+                <i class="fab fa-facebook-f nav-left-icon" ></i>
+                <i class="fab fa-twitter nav-left-icon" ></i>
+                <i class="fab fa-pinterest-p nav-left-icon" ></i>
+                <i class="fa fa-vk nav-left-icon"></i>
+                <i class="fab fa-google-plus-g nav-left-icon" ></i>
+                <i class="fab fa-behance nav-left-icon"></i>
+                <i class="fab fa-dribbble nav-left-icon" ></i>
+                <i class="fab fa-instagram nav-left-icon"></i>
                 </span>
                 <span class="nav-right">
 
-                    <i class="fas fa-user-circle" style="margin-right:3px;" ></i>
-                    <span class="head">SIGN  IN</span>
+                    <i class="fas fa-user-circle nav-right-icon1"></i>
+                    <span class="head">SIGN IN</span>
                     <span id="verticle"></span>
-                    <i class="fas fa-globe" style="margin-right:3px;" ></i>
+                    <i class="fas fa-globe nav-right-icon1"></i>
                     <span class="head">ENG</span>
-                    <i class="fa fa-angle-down" style="font-size: 13px; margin-right: 0px;" ></i>
+                    <i class="fa fa-angle-down nav-right-icon2"></i>
 
                 </span>
             </div>
@@ -36,47 +36,48 @@
             <i class="fas fa-angle-right right-arrow"></i>
             <div class="text1">
             <div class="banner-top">
-            <div id=pasco>PASCO</div>
-            <div class="menu-right">
+            <div id=top-left>PASCO</div>
                 <div id="middle">
-                    <span class="nav">HOME</span>
-                    <i class="fa fa-angle-down drop" ></i>
-                    <span class="nav">PORTFOLIO</span>
-                    <i class="fa fa-angle-down drop" style="margin-left: 3px;" ></i>
-                    <span class="nav">BLOG</span>
-                    <i class="fa fa-angle-down drop" style="margin-left: 2px; margin-right: 27px;"></i>
-                    <span class="nav">PAGES</span>
-                    <i class="fa fa-angle-down drop" style="margin-left: 2px;" ></i>
-                    <span class="nav">SHOP</span>
-                    <i class="fa fa-angle-down drop" ></i>
-                    <span class="nav">COMPONENTS</span>
-                    <i class="fa fa-angle-down drop" ></i>
-                    <span class="nav">FEATURES</span>
-                    <i class="fa fa-angle-down drop" style="margin-right:53px; margin-left: 2px;"></i>
-    
+                    <ul>
+                        <li class="li" id="horizontal">
+                            <span class="nav" >HOME</span>
+                            <i class="fa fa-angle-down drop" ></i></li>
+                        <li class="li"><span class="nav">PORTFOLIO</span>
+                            <i class="fa fa-angle-down drop"  ></i></li> 
+                        <li class="li"><span class="nav">BLOG</span>
+                            <i class="fa fa-angle-down drop" ></i></li> 
+                        <li class="li"><span class="nav">PAGES</span>
+                            <i class="fa fa-angle-down drop"  ></i></li> 
+                        <li class="li"><span class="nav">SHOP</span>
+                            <i class="fa fa-angle-down drop" ></i></li>
+                        <li class="li"><span class="nav">COMPONENTS</span>
+                            <i class="fa fa-angle-down drop" ></i></li>
+                        <li class="li"><span class="nav">FEATURES</span>
+                            <i class="fa fa-angle-down drop" ></i></li>
+                    </ul>
                 </div>
-                <i class="fa fa-search" style="color: white; font-size: 17px; margin: 5px 12px 0px 0px;" ></i>
+                <div class="right">
+                <i class="fa fa-search" id="top-right-icon1"></i>
                 <span class="verticle2"></span>
-                <i class="far fa-heart" style="color: white; font-size: 20px; margin: 5px 9px 0px 8px; " ></i>
+                <i class="far fa-heart" id="top-right-icon2"></i>
                 <span class="verticle2"></span>
-                <i class="fas fa-shopping-cart" style="color: white; font-size: 17px; margin: 5px 15px 0px 12px;"></i>
-                <div class="horizontal-line"></div>
-            </div>
-            </div>
+                <i class="fas fa-shopping-cart" id="top-right-icon3"></i>
+                </div>
+            </div>    
             <div class="banner-center">
-                <div style="color: rgb(182, 182, 182); font-size:20px; margin-bottom: 8px; letter-spacing: 1px;">INSPIRATION</div>
-                <div class="big" style="margin-left:11px; margin-bottom: -10px;">5 WAYS MILLLENNIALS CAN START</div>
-                <div class="big" style="margin-left: 4px; margin-top: 2px; word-spacing: -5px;">BUILDING THEIR FUTURE TODAY</div>
-                <button>READ MORE</button>
+                <div class="inspiration">INSPIRATION</div>
+                <div class="big1">5 WAYS MILLLENNIALS CAN START</div>
+                <div class="big2">BUILDING THEIR FUTURE TODAY</div>
+                <button class="read-more">READ MORE</button>
             </div>
             <div class="banner-bottom">
-                <img src="henry.png" style="margin-top:-16px;">
+                <img src="henry.png">
                 <div id="henry">Henry Little</div>
-                <div class="date-comment" style="margin-top: 9px;">
+                <div class="date">
                     <span style="margin-right: 2px; margin-left:10px;">Apri 28, 2016</span>
                     <span style="margin-right: 3px;">10:15</span>
                 </div>
-                <div class="date-comment" style="margin-top: 30px;">
+                <div class="comment">
                     <i class="material-icons" style="font-size: 16px;margin-right: 3px; color: rgb(190,190,190);">forum</i>
                     <span style="margin-right: 26px;">Comments (28)</span>
                     <i  class="far fa-heart" style="font-size: 14px; color: rgb(190,190,190);"></i>
@@ -84,7 +85,13 @@
                 </div>
             </div>
             </div>
-            
+            </div>
         </div>
+
+        <!--<div class="sort-bar">
+            <div class="sort-bar-center">
+                <p style="align-self: center;">SORT BLOG</p>
+            </div>
+        </div>-->
     </body>
 </html>
