--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -74,14 +74,20 @@
                 <img src="henry.png">
                 <div id="henry">Henry Little</div>
                 <div class="date">
-                    <span style="margin-right: 2px; margin-left:10px;">Apri 28, 2016</span>
-                    <span style="margin-right: 3px;">10:15</span>
+                    <span>Apri 28, 2016</span>
+                    <span>10:15</span>
                 </div>
-                <div class="comment">
-                    <i class="material-icons" style="font-size: 16px;margin-right: 3px; color: rgb(190,190,190);">forum</i>
-                    <span style="margin-right: 26px;">Comments (28)</span>
-                    <i  class="far fa-heart" style="font-size: 14px; color: rgb(190,190,190);"></i>
-                    <span>Likes (07)</span>
+                <div>
+                    <div class="comment">
+                        <i class="material-icons comment-icon">forum</i>
+                        <span>Comments (28)</span>
+                    </div>
+                    
+                    <div class="like">
+                        <i  class="far fa-heart like-icon"></i>
+                        <span>Likes (07)</span>
+                    </div>
+                    
                 </div>
             </div>
             </div>
