--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -38,7 +38,7 @@
             <div class="banner-top">
             <div id=top-left>PASCO</div>
                 <div id="middle">
-                    <ul>
+                    <ul class="nav-list">
                         <li class="li" id="horizontal">
                             <span class="nav" >HOME</span>
                             <i class="fa fa-angle-down drop" ></i></li>
@@ -94,10 +94,20 @@
             </div>
         </div>
 
-        <!--<div class="sort-bar">
+        <div class="sort-bar">
             <div class="sort-bar-center">
-                <p style="align-self: center;">SORT BLOG</p>
+                    <div class="sort">SORT BLOG:</div>
+                    <ul class="filter-list">
+                        <li class="all">ALL</li>
+                        <li class="filter">PHOTOGRAPHY</li>
+                        <li class="filter">LIFESTYLE</li>
+                        <li class="filter">TRIP</li>
+                        <li class="filter">INSPIRATION</li>
+                    </ul>
             </div>
-        </div>-->
+        </div>
+        <div class="main-body">
+
+        </div>
     </body>
 </html>
