--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -91,9 +91,7 @@
                 </div>
             </div>
             </div>
-            </div>
         </div>
-
         <div class="sort-bar">
             <div class="sort-bar-center">
                     <div class="sort">SORT BLOG:</div>
@@ -107,7 +105,38 @@
             </div>
         </div>
         <div class="main-body">
+            <div class="text2">
+                <div class="main-left">
+                    <div class="card1">
+                        <div class="card1-image">
+                            <img id="play-button" src="img3.png">
+                            <div class="lifestyle">
+                                <div class="lifestyle-left">LIFESTYLE</div>
+                                <div class="lifestyle-right">
+                                    <div class="lifestyle-right-comment">
+                                        <i class="material-icons comment-icon1">forum</i>
+                                        <span>7</span>
+                                    </div>
+                                    
+                                    <div class="lifestyle-right-like">
+                                        <i  class="far fa-heart like-icon1"></i>
+                                        <span>15</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
 
+                        </div>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="main-right">
+                    
+                </div>
+            </div>        
         </div>
     </body>
 </html>
