--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,24 +10,31 @@
         <div class="container">
             <div class="text">
                 <span class="nav-left">
-                <i class="fab fa-facebook-f nav-left-icon" ></i>
-                <i class="fab fa-twitter nav-left-icon" ></i>
-                <i class="fab fa-pinterest-p nav-left-icon" ></i>
-                <i class="fa fa-vk nav-left-icon"></i>
-                <i class="fab fa-google-plus-g nav-left-icon" ></i>
-                <i class="fab fa-behance nav-left-icon"></i>
-                <i class="fab fa-dribbble nav-left-icon" ></i>
-                <i class="fab fa-instagram nav-left-icon"></i>
+                <a href="#"><i class="fab fa-facebook-f nav-left-icon" ></i></a>
+                <a href="#"><i class="fab fa-twitter nav-left-icon" ></i></a>
+                <a href="#"><i class="fab fa-pinterest-p nav-left-icon" ></i></a>
+                <a href="#"><i class="fa fa-vk nav-left-icon"></i></a>
+                <a href="#"><i class="fab fa-google-plus-g nav-left-icon" ></i></a>
+                <a href="#"><i class="fab fa-behance nav-left-icon"></i> </a>
+                <a href="#"><i class="fab fa-dribbble nav-left-icon" ></i></a>
+                <a href="#"><i class="fab fa-instagram nav-left-icon"></i></a>
                 </span>
                 <span class="nav-right">
-
-                    <i class="fas fa-user-circle nav-right-icon1"></i>
-                    <span class="head">SIGN IN</span>
+                    <a href="#">
+                        <div class="container-right">
+                        <i class="fas fa-user-circle nav-right-icon1"></i>
+                        <span class="head">SIGN IN</span>
+                        </div>
+                    </a>
                     <span id="verticle"></span>
-                    <i class="fas fa-globe nav-right-icon1"></i>
-                    <span class="head">ENG</span>
-                    <i class="fa fa-angle-down nav-right-icon2"></i>
-
+                    <a href="#">
+                        <div class="container-right">
+                        <i class="fas fa-globe nav-right-icon1"></i>
+                        <span class="head">ENG</span>
+                        <i class="fa fa-angle-down nav-right-icon2"></i>
+                        </div>
+                    </a>
+                    
                 </span>
             </div>
         </div>
@@ -57,11 +64,11 @@
                     </ul>
                 </div>
                 <div class="right">
-                <i class="fa fa-search" id="top-right-icon1"></i>
+                <a href="#"><i class="fa fa-search" id="top-right-icon1"></i></a>
                 <span class="verticle2"></span>
-                <i class="far fa-heart" id="top-right-icon2"></i>
+                <a href="#"><i class="far fa-heart" id="top-right-icon2"></i></a>
                 <span class="verticle2"></span>
-                <i class="fas fa-shopping-cart" id="top-right-icon3"></i>
+                <a href="#"><i class="fas fa-shopping-cart" id="top-right-icon3"></i></a>
                 </div>
             </div>    
             <div class="banner-center">
@@ -71,11 +78,13 @@
                 <button class="read-more">READ MORE</button>
             </div>
             <div class="banner-bottom">
-                <img src="henry.png">
-                <div id="henry">Henry Little</div>
-                <div class="date">
-                    <span>Apri 28, 2016</span>
-                    <span>10:15</span>
+                <div>
+                    <img src="henry.png">
+                    <div id="henry">Henry Little</div>
+                    <div class="date">
+                        <span>Apri 28, 2016</span>
+                        <span>10:15</span>
+                    </div>
                 </div>
                 <div>
                     <div class="comment">
@@ -96,16 +105,16 @@
             <div class="sort-bar-center">
                     <div class="sort">SORT BLOG:</div>
                     <ul class="filter-list">
-                        <li class="all">ALL</li>
-                        <li class="filter">PHOTOGRAPHY</li>
-                        <li class="filter">LIFESTYLE</li>
-                        <li class="filter">TRIP</li>
-                        <li class="filter">INSPIRATION</li>
+                        <a href="#"><li class="all">ALL</li></a>
+                        <a href="#"><li class="filter">PHOTOGRAPHY</li></a>
+                        <a href="#"><li class="filter">LIFESTYLE</li></a>
+                        <a href="#"><li class="filter">TRIP</li></a>
+                        <a href="#"><li class="filter">INSPIRATION</li></a>
                     </ul>
             </div>
         </div>
         <div class="main-body">
-            <div class="text2">
+            <div class="text2"> 
                 <div class="main-left">
                     <div class="card1">
                         <div class="card1-image">
@@ -125,11 +134,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
-
+                        <div class="things10">
+                            <p class="things101">10 Things To Do To Change Your Life Forever</p>
+                            <p class="things102">The one constant thing in our life is change. We cannot avoid it and the more we resist change<br> the tougher our life becomes. I know this because I was very skilled at deflecting change in life.</p>
                         </div>
-                        <div>
-
+                        <div class="author">
+                            <div class="author-photo"></div>
+                            <div class="author-text">
+                                <div class="author-text-name">Henry Little</div>
+                                <div class="author-text-dt">Apri 28, 2016     10:15</div>
+                            </div>
                         </div>
                     </div>
                 </div>
