--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -144,6 +144,7 @@
                                 <div class="author-text-name">Henry Little</div>
                                 <div class="author-text-dt">Apri 28, 2016     10:15</div>
                             </div>
+                            <div class="menu-3dots"><a href="#"><i class="fa fa-ellipsis-v"></i></a></div>
                         </div>
                     </div>
                 </div>
