--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="abc.css">
         <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900'>
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,900" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="container">
@@ -437,8 +438,52 @@
                     </div>
                     </a>
                 </div>
-                <div class="main-right">
-                    
+                <div class="main-right">                
+                    <div class="search-container">
+                        <input type="text" placeholder="Search" class="search-input">
+                        <a href="#" class="search-btn">
+                        <i class="fas fa-search"></i></a>
+                    </div>
+                    <div class="categories-list">
+                        <div>CATEGORIES</div>
+                        <hr>
+                        <table>
+                            <tr>
+                                <td class="cat-name"> Photography</td>
+                                <td class="cat-no"> 195</td>
+                            </tr>
+                            <tr>
+                                <td class="cat-name">Illustration</td>
+                                <td class="cat-no">15</td>
+                            </tr>
+                            <tr>
+                                <td class="cat-name">Graphic Design</td>
+                                <td class="cat-no">36</td>
+                            </tr>
+                            <tr>
+                                <td class="cat-name">Web design</td>
+                                <td class="cat-no">220</td>
+                            </tr>
+                            <tr class="last">
+                                <td class="cat-name">Videography</td>
+                                <td class="cat-no">17</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="subscribe">
+                        <div>SUBCRIBE</div>
+                        <hr>
+                        <div>
+                            <div class="subscribe-name">Name</div>
+                            <input type="text" placeholder="Igor Ten" class="subscribe-input">
+                        </div>
+                        <div>
+                            <div class="subscribe-name">Email</div>
+                            <input type="text" placeholder="email@adress.com" class="subscribe-input">
+                        </div>
+                        <button type="button" class="subscribe-btn">SUBCRIBE</button>
+                        <div class="or"><span>or</span></div>
+                    </div>
                 </div>
             </div>        
         </div>
