--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -483,6 +483,18 @@
                         </div>
                         <button type="button" class="subscribe-btn">SUBCRIBE</button>
                         <div class="or"><span>or</span></div>
+                        <div class="subscribe-icons">
+                            <a href="#"><i class="fab fa-facebook-f f"></i></a>
+                            <a href="#"><i class="fab fa-twitter tw"></i></a>
+                            <a href="#"><i class="fab fa-vk vk"></i></a>
+                            <a href="#"><i class="fab fa-pinterest-p p"></i></a>
+                            <a href="#"><i class="fab fa-tumblr t" ></i></a>
+                            <a href="#"><i class="fab fa-dribbble d" ></i></a>
+                        </div>
+                    </div>
+                    <div class="tabpost">
+                        <div>TAB POST WIDGET</div>
+                        <hr>
                     </div>
                 </div>
             </div>        
