--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -493,11 +493,101 @@
                         </div>
                     </div>
                     <div class="tabpost">
-                        <div>TAB POST WIDGET</div>
+                        <div class="widget">TAB POST WIDGET</div>
                         <hr>
+                        <div class="rp-post">
+                            <div class="post post-filter">RECENT POST</div>
+                            <div class="post ">POPULAR POST</div>
+                        </div>
+                        <div class="tabpost-card1">
+                            <div><img src="images/img15.jpg" alt=""></div>
+                            <div class="content">
+                                <div class="date">
+                                    <div>April 28, 2016</div>
+                                    <a href="#">
+                                        <div class="tabpost-comment">
+                                            <i class="material-icons tabpost-commenticon">forum</i>
+                                            <span>17</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="text">Duis commodo elit<br> sed nisi molestie</div>
+                            </div>
+                        </div>
+                        <hr class="card-hr">
+                        <div class="tabpost-card1">
+                            <div><img src="images/img16.jpg" alt=""></div>
+                            <div class="content">
+                                <div class="date">
+                                    <div>April 28, 2016</div>
+                                    <a href="#">
+                                        <div class="tabpost-comment">
+                                            <i class="material-icons tabpost-commenticon">forum</i>
+                                            <span>17</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="text">Duis commodo elit<br> sed nisi molestie</div>
+                            </div>
+                        </div>
+                        <hr class="card-hr"> 
+                        <div class="tabpost-card1">
+                            <div><img src="images/img17.jpg" alt=""></div>
+                            <div class="content">
+                                <div class="date">
+                                    <div>April 28, 2016</div>
+                                    <a href="#">
+                                        <div class="tabpost-comment">
+                                            <i class="material-icons tabpost-commenticon">forum</i>
+                                            <span>17</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="text">Duis commodo elit<br> sed nisi molestie</div>
+                            </div>
+                        </div>
+                        <hr class="card-hr">
+                        <div class="tabpost-card1">
+                            <div><img src="images/img18.jpg" alt=""></div>
+                            <div class="content">
+                                <div class="date">
+                                    <div>April 28, 2016</div>
+                                    <a href="#">
+                                        <div class="tabpost-comment">
+                                            <i class="material-icons tabpost-commenticon">forum</i>
+                                            <span>17</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="text">Duis commodo elit<br> sed nisi molestie</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tags">
+                        <div>TAGS</div>
+                        <hr>
+                        <div class="tag-container">
+                            <div>Photography</div>
+                            <div>Webdesign</div>
+                            <div>Youtube</div>
+                            <div>Envato</div>
+                            <div>Art</div>
+                            <div>Themefotest</div>
+                            <div>Illustration</div>
+                        </div>
                     </div>
                 </div>
             </div>        
+        </div>
+        <div class="footer">
+            <div class="f-img1"></div>
+            <div class="f-img2">
+                <div class="f-img2-text">
+                    <div class="sub">Subscribe to our newsletter</div>
+                    <input type="text" placeholder="Email Adress" class="Email-input">
+                    <button type="button" class="f-subscribe">SUBSCRIBE</button>
+                </div>
+            </div>
         </div>
     </body>
 </html>
