--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -47,21 +47,21 @@
             <div id=top-left>PASCO</div>
                 <div id="middle">
                     <ul class="nav-list">
-                        <li class="li" id="horizontal">
+                        <a href="#"><li class="li" id="horizontal">
                             <span class="nav" >HOME</span>
-                            <i class="fa fa-angle-down drop" ></i></li>
-                        <li class="li"><span class="nav">PORTFOLIO</span>
-                            <i class="fa fa-angle-down drop"  ></i></li> 
-                        <li class="li"><span class="nav">BLOG</span>
-                            <i class="fa fa-angle-down drop" ></i></li> 
-                        <li class="li"><span class="nav">PAGES</span>
-                            <i class="fa fa-angle-down drop"  ></i></li> 
-                        <li class="li"><span class="nav">SHOP</span>
-                            <i class="fa fa-angle-down drop" ></i></li>
-                        <li class="li"><span class="nav">COMPONENTS</span>
-                            <i class="fa fa-angle-down drop" ></i></li>
-                        <li class="li"><span class="nav">FEATURES</span>
-                            <i class="fa fa-angle-down drop" ></i></li>
+                            <i class="fa fa-angle-down drop" ></i></li></a>
+                        <a href="#"><li class="li"><span class="nav">PORTFOLIO</span>
+                            <i class="fa fa-angle-down drop"  ></i></li></a> 
+                        <a href="#"><li class="li"><span class="nav">BLOG</span>
+                            <i class="fa fa-angle-down drop" ></i></li></a> 
+                        <a href="#"><li class="li"><span class="nav">PAGES</span>
+                            <i class="fa fa-angle-down drop"  ></i></li></a> 
+                        <a href="#"><li class="li"><span class="nav">SHOP</span>
+                            <i class="fa fa-angle-down drop" ></i></li></a>
+                        <a href="#"><li class="li"><span class="nav">COMPONENTS</span>
+                            <i class="fa fa-angle-down drop" ></i></li></a>
+                        <a href="#"><li class="li"><span class="nav">FEATURES</span>
+                            <i class="fa fa-angle-down drop" ></i></li></a>
                     </ul>
                 </div>
                 <div class="right">
@@ -694,6 +694,33 @@
                         <input type="text" placeholder="Email Address" class="news-input">
                         <textarea placeholder="Message" class="news-input-area"></textarea>
                         <button type="button" class="news-subscribe-btn">SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="f-nav">
+                <div class="f-nav-text">
+                    <ul class="f-nav-list">
+                        <a href="#"><li class="f-list-elem f-list-home">HOME</li></a>
+                        <a href="#"><li class="f-list-elem">PORTFOLIO</li></a>
+                        <a href="#"><li class="f-list-elem">BLOG</li></a>
+                        <a href="#"><li class="f-list-elem">PAGES</li></a>
+                        <a href="#"><li class="f-list-elem">SHOP</li></a>
+                        <a href="#"><li class="f-list-elem">COMPONENTS</li></a>
+                        <a href="#"><li class="f-list-elem">FEATURES</li></a>
+                    </ul>
+                    <div class="f-nav-right">
+                        <div class="f-search-container">
+                            <input type="text" placeholder="Search" class="f-search-input">
+                            <a href="#" class="f-search-btn">
+                            <i class="fas fa-search"></i></a>
+                        </div>
+                        <a href="#" class="f-eng">
+                            <div class="f-lang-right">
+                            <i class="fas fa-globe nav-right-icon1"></i>
+                            <span class="head">ENG</span>
+                            <i class="fa fa-angle-down nav-right-icon2"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
