--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -165,7 +165,7 @@
                         <div class="card2-content">
                             <div class="card2-text">
                                 <a href="#"><h3 class="card2-text1">4 Natural Ways To Have Young Skin</h3></a>
-                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
+                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula<br> lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
                             </div>
                             <div class="card2-author">
                                 <a href="#"  class="card2-author-photo"></a>
@@ -196,7 +196,7 @@
                         <div class="card2-content">
                             <div class="card2-text">
                                 <a href="#"><h3 class="card2-text1">Six Hobbies That Can Help You Beat Stress</h3></a>
-                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
+                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula<br> lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
                             </div>
                             <div class="card2-author">
                                 <a href="#"  class="card3-author-photo"></a>
@@ -227,7 +227,7 @@
                         <div class="card2-content">
                             <div class="card2-text">
                                 <a href="#"><h3 class="card4-text1">10 Singals From Your Body Telling You Should Sleep More</h3></a>
-                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
+                                <p class="card2-text2">Lorem ipsum dolor sit amet, to consectetur  adipi scing elit. Nulla vehicula<br> lorem and lacus. Vestibulum vitae mauris lorem ipsum doar. </p>
                             </div>
                             <div class="card2-author">
                                 <a href="#"  class="card4-author-photo"></a>
@@ -244,8 +244,8 @@
                             <div class="card5-image">
                                 <a href="#"  class="card5-play-button"><img  src="images/img3.png" width="40" height="40"></a>
                                 <div>
-                                    <div class="card2-inspiration-left">INSPIRATION</div>
-                                    <div class="card2-inspiration-right">
+                                    <div class="card5-inspiration-left">INSPIRATION</div>
+                                    <div class="card5-inspiration-right">
                                         <a href="#"  class="lifestyle-right-comment">
                                             <i class="material-icons comment-icon2">forum</i>
                                             <span>7</span>
@@ -273,8 +273,8 @@
                         <div class="card6">
                             <div class="card6-image">
                                 <div>
-                                    <div class="card2-inspiration-left">TRIP</div>
-                                    <div class="card2-inspiration-right">
+                                    <div class="card5-inspiration-left">TRIP</div>
+                                    <div class="card5-inspiration-right">
                                         <a href="#" class="lifestyle-right-comment">
                                             <i class="material-icons comment-icon2">forum</i>
                                             <span>3</span>
@@ -304,8 +304,8 @@
                                 <a href="#" class="card7-arrow-left"></a>
                                 <a href="#" class="card7-arrow-right"></a>
                                 <div>
-                                    <div class="card2-inspiration-left">LIFESTYLE</div>
-                                    <div class="card2-inspiration-right">
+                                    <div class="card5-inspiration-left">LIFESTYLE</div>
+                                    <div class="card5-inspiration-right">
                                         <a href="#"  class="lifestyle-right-comment">
                                             <i class="material-icons comment-icon2">forum</i>
                                             <span>18</span>
